@@ -1,4 +1,3 @@
-import Image from "next/image";
 import HeroSection from "../_sections/landing-page/hero-section";
 
 export default function LandingPage() {
