@@ -6,10 +6,11 @@ import React from 'react'
 import clsx from 'clsx'
 
 type AppHeaderProps = {
-    appId: string
+    appId: string,
+    totalSignUps?: number
 }
 
-const AppHeaderNav = ({ appId }: AppHeaderProps) => {
+const AppHeaderNav = ({ appId , totalSignUps }: AppHeaderProps) => {
 
     const pathname = usePathname()
 
@@ -17,7 +18,8 @@ const AppHeaderNav = ({ appId }: AppHeaderProps) => {
         {
             url: `/dashboard/${appId}`,
             icon: MailIcon,
-            text: "Sign Ups"
+            text: "Sign Ups",
+            extra: totalSignUps
         },
         {
             url: `/dashboard/${appId}/api-keys`,
@@ -44,7 +46,7 @@ const AppHeaderNav = ({ appId }: AppHeaderProps) => {
                     link.url == pathname ? "bg-primary text-primary-foreground" : "border-2 border-primary text-primary hover:border-secondary hover:text-secondary"
                 )}>
                     <link.icon />
-                    <span className='hidden md:block'>{link.text}</span>
+                    <span className='hidden md:block'>{link.text} {link.extra ? '- ' + link.extra : null}</span>
                 </Link>
             ))}
         </nav>
