@@ -2,6 +2,8 @@ import { getAppSignups } from "@/app/actions/apps.actions"
 import Image from "next/image"
 import ShareLinkButton from "./share-link-button"
 import { headers } from "next/headers"
+import { CopyIcon } from "lucide-react"
+import CopyButton from "../copy-button"
 
 
 export const SignUpsLoadingSkeleton = () => {
@@ -19,10 +21,12 @@ type SignUpsListProps = {
   appId: string
 }
 
-const NoSignUpsPlaceholder = async ({ appId } : { appId: string }) => {
+const NoSignUpsPlaceholder = async ({ appId }: { appId: string }) => {
 
   const headersList = await headers();
-  const baseUrl = headersList.get('x-base-url') || ''; // Get the base URL
+  const baseUrl = headersList.get('x-base-url') || '';
+  
+  const link = baseUrl + '/waitlyst-form/' + appId
 
   return <div className='relative z-0 size-full flex flex-col gap-[16px] items-center justify-center'>
     <div className='absolute size-full top-0 left-0 grid place-items-center -z-[1]'>
@@ -37,7 +41,12 @@ const NoSignUpsPlaceholder = async ({ appId } : { appId: string }) => {
     <h1 className='font-instrument text-center'>Waiting on your first signup.</h1>
     <p className='font-instrument text-small md:text-[32px] text-center'>Share your WaitLyst link and watch the list grow.</p>
 
-    <ShareLinkButton className="mt-[32px]" url={baseUrl + '/waitlyst-form/' + appId} />
+    <div className="w-full mt-[32px] flex items-center justify-center gap-[8px]">
+      <ShareLinkButton url={link} />
+      <CopyButton className="btn bg-primary text-primary-foreground" text={link} successText="Link Copied" errorText="Couldn't copy link">
+        Copy Link <CopyIcon />
+      </CopyButton>
+    </div>
   </div>
 }
 
@@ -45,7 +54,7 @@ const SignUpsList = async ({ appId }: SignUpsListProps) => {
 
   const signups = await getAppSignups(appId)
 
-  if (!signups.length) return <NoSignUpsPlaceholder appId={appId}/>
+  if (!signups.length) return <NoSignUpsPlaceholder appId={appId} />
 
   return (
     <div className="size-full p-[16px] gap-[16px]">
