@@ -3,6 +3,7 @@ import { user } from "./auth";
 
 
 export const credentials = pgTable("credentials" , {
+    id: uuid().primaryKey().defaultRandom().notNull(),
     ownerId: uuid('owner_id').references(() => user.id).notNull(),
     apiKey: text('api_key')
 })
