@@ -36,6 +36,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.1",
+    "shiki": "^3.7.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
     "typescript": "^5"
